# boostlab

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  tasks.py
.github/workflows/: ci.yml
data/: classification_dataset.csv
src/boostlab/: dataset.py  experiment.py  model.py
tests/: test_experiment.py  test_model.py
