[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boostlab"
version = "0.1.0"
description = "A modular XGBoost experimentation framework"
authors = [
  { name = "Mikkel Christensen", email = "christensenv.mikkel@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "xgboost>=1.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "mypy>=0.10",
  "ruff>=0.0",
  "pre-commit>=2.20",
]

[tool.mypy]
# Treat 'src' as a package root for imports
mypy_path = ["src"]
ignore_missing_imports = true
allow_untyped_calls = true
allow_untyped_defs = true
disable_error_code = ["operator"]
