[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boostlab"
version = "0.1.0"
description = "A modular XGBoost experimentation framework"
authors = [
  { name = "Mikkel Christensen", email = "christensenv.mikkel@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "xgboost>=1.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "mypy>=0.10",
  "ruff>=0.0",
  "pre-commit>=2.20",
]

[tool.mypy]
# Treat 'src' as a package root for imports
mypy_path = ["src", "tests"]               # add ./src and tests to the module search path
ignore_missing_imports = true     # dont error on missing-stub third-party libs
allow_untyped_calls = true        # allow calls into code without type hints
allow_untyped_defs = true         # allow functions without type hints
disable_error_code = ["operator"] # suppress the "unknown operator" error
