[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "boostlab"
version = "0.1.0"
description = "A modular XGBoost experimentation framework"
authors = ["Mikkel Christensen <christensenv.mikkel@gmail.com>"]
license = ""

readme = "README.md"
[tool.poetry.dependencies]
python        = ">=3.11,<4.0"
numpy         = "^2.3.1"
pandas        = "^2.3.1"
xgboost       = "^3.0.2"
scikit-learn  = "^1.7.1"

[tool.poetry.group.dev.dependencies]
pytest        = "^8.4.1"
mypy          = "^1.17.0"
ruff          = "^0.12.4"
pre-commit    = "^4.2.0"


[tool.mypy]
# Treat 'src' as a package root for imports
mypy_path = ["src", "tests"]               # add ./src and tests to the module search path
ignore_missing_imports = true     # dont error on missing-stub third-party libs
allow_untyped_calls = true        # allow calls into code without type hints
allow_untyped_defs = true         # allow functions without type hints
disable_error_code = ["operator"] # suppress the "unknown operator" error
